--- a/frontend/src/pages/MyOrders/MyOrders.css
+++ b/frontend/src/pages/MyOrders/MyOrders.css
@@ -40,6 +40,16 @@
     cursor: pointer;
     color: #454545;
 }
+.my-orders .active{
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 40px;
+    height: 50vh;
+    color: tomato;
+    font:bold
+}
 
 @media(max-width:900px){
 
