--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -31,6 +31,41 @@
       opacity: 1;
    }
  }
+
+ .verify .spinner{
+   width: 100px;
+   height: 100px;
+   place-self: center;
+   border: 5px solid #bdbdbd;
+   border-top-color: tomato;
+   border-radius: 50%;
+   animation: rotate 1s infinite;
+}
+
+@keyframes rotate {
+
+   100%{
+       transform: rotate(360deg);
+   }
+}
+   
+ .loader{
+   width: 100px;
+   height: 100px;
+   place-self: center;
+   border: 5px solid #bdbdbd;
+   border-top-color: tomato;
+   border-radius: 50%;
+   animation: rotate 1s infinite;
+}
+
+@keyframes rotate {
+
+   100%{
+       transform: rotate(360deg);
+   }
+   
+}
  
  
   
